--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
   <body>
     <!-- <button class="btn">Кнопка</button>
+    <button class="btn">Кнопка</button>
+    <button class="btn btn_yellow">Кнопка</button> -->
 
     <div class="rating">
       <img
@@ -23,9 +25,8 @@
       <img class="rating__star" src="img/star-yellow.svg" alt=" " />
       <img class="rating__star" src="img/star-yellow.svg" alt=" " />
       <img class="rating__star" src="img/star-gray.svg" alt=" " />
-    </div> -->
-
-    <div class="card">
+    </div>
+    <!-- <div class="card">
       <img class="card__img" src="img/1.jpg" alt="Bon restaurant" />
       <div class="card__body">
         <div class="card__price-rating">
@@ -46,6 +47,6 @@
         <span class="card__location">Париж, Франция</span>
         <button class="btn card__btn">Забронировать</button>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
